--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,10 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
+
+  font-family: "Overpass", sans-serif;
+  background-color: #ff9500;
+  color: #fff;
 }
 
 *, *::before, *::after {
